cmake_minimum_required(VERSION 3.17)
project(BinaryTree)

set(CMAKE_CXX_STANDARD 11)
add_compile_options(-std=c++2a -Werror -Wsign-conversion)
add_executable(demo Demo.cpp sources/BinaryTree.hpp)
add_executable(test Test.cpp sources/BinaryTree.hpp)
#add_executable(test1 StudentTest1.cpp sources/BinaryTree.hpp)
add_executable(test2 StudentTest2.cpp sources/BinaryTree.hpp)
#add_executable(test3 StudentTest3.cpp sources/BinaryTree.cpp sources/BinaryTree.hpp)
#add_executable(main main.cpp)